--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -98,7 +98,7 @@ button:hover, button:focus, button:visited, button:active{
     outline: none;
 }
 table {
-    border: 1px solid #b9c0ab;
+    border: 2px solid #b9c0ab; /*Cambio de Jose Angel*/
     border-collapse: collapse;
     border-spacing: 0;
     table-layout: auto;
@@ -106,7 +106,7 @@ table {
     margin-bottom: 20px;
 }
 th,td{
-    border: 1px solid #242222bf;
+    border: 2px solid #242222bf; /*Cambio de Jose Angel*/
     padding: 10px 5px;
     font-weight: normal;
     text-align: center;
